<resources>
    <string name="Billing_Cycle">Billing Cycle :</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Click_here_to_go_Service_Dashboard">Click here to go Service Dashboard</string>
    <string name="Comfirm_password">Comfirm Password</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="DownloadFailed">Download Failed</string>
    <string name="Due_Date">Due Date :</string>
    <string name="English">Value</string>
    <string name="Enter_subject">Enter subject :</string>
    <string name="First_Time_Payment">First Time Payment :</string>
    <string name="Install_EPG">INSTALL EPG</string>
    <string name="N_A">N/A</string>
    <string name="Next_Due_Date">Next Due Date :</string>
    <string name="Payment_Method">Payment Method :</string>
    <string name="Pricing">Pricing :</string>
    <string name="Prodotto">Product:</string>
    <string name="Product">Product :</string>
    <string name="Recurring_Amount">Recurring Amount :</string>
    <string name="Registration_Date">Registration Date :</string>
    <string name="Remove">Remove</string>
    <string name="Romanian">Value</string>
    <string name="Service_Buy_Now">| Service Buy Now</string>
    <string name="Service_Information">| Service Information</string>
    <string name="Speed">Speed</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="Use_no_proxy">None</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abi_mismatch">Preferred native ABI precedence of this device (%1$s) and ABI reported by native libraries (%2$s) mismatch</string>
    <string name="ability_to_change_player_and_player_settings">- Ability to change player and player settings</string>
    <string name="accept">Accept</string>
    <string name="access_denied">Access Denied, <u><font color="#8B0000">Click here</font></u> to allow the permission</string>
    <string name="accouncement">Announcements</string>
    <string name="account">ACCOUNT</string>
    <string name="account_active_connections">Active Connections:</string>
    <string name="account_created">Account created successfully!</string>
    <string name="account_created_at">Created At:</string>
    <string name="account_expiry_date">Expiry Date:</string>
    <string name="account_info">ACCOUNT INFO</string>
    <string name="account_info_small">Account Info</string>
    <string name="account_is_trial">Is Trial:</string>
    <string name="account_max_connections">Max Connections:</string>
    <string name="account_status">Account Status:</string>
    <string name="account_username">Username:</string>
    <string name="act_code">Activation Code</string>
    <string name="action_clear_queue">Clear Queue</string>
    <string name="action_settings">Settings</string>
    <string name="activate">Activate</string>
    <string name="activation">Activation</string>
    <string name="activation_code">Activation Code</string>
    <string name="active">Active</string>
    <string name="active_channel">Loading…</string>
    <string name="add">Add</string>
    <string name="add_category_to_lock">Add Category to lock</string>
    <string name="add_certificate">Add Certificate</string>
    <string name="add_crt">Add Cert.file</string>
    <string name="add_crt_file">Add Certificate File</string>
    <string name="add_epg">Add EPG</string>
    <string name="add_epg_source">Add EPG Source</string>
    <string name="add_epg_xml">ADD EPG (.xml)</string>
    <string name="add_fav">: Added To Favourite</string>
    <string name="add_new_external_player">Add New Player</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="add_new_user">Add New User</string>
    <string name="add_player">ADD PLAYER</string>
    <string name="add_prof">Add Profile</string>
    <string name="add_profile">Add Profile</string>
    <string name="add_source">Add Source</string>
    <string name="add_to_fav">Add To Favourite</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="add_to_live">Move to Live</string>
    <string name="add_to_movies">Move to Movies</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="add_to_series">Move to Series</string>
    <string name="add_user">Add User</string>
    <string name="added_external_player">Player added successfully</string>
    <string name="added_externalplayerSettings">Added External Players</string>
    <string name="added_to_live">Moved to Live</string>
    <string name="added_to_movies">Moved to Movies</string>
    <string name="added_to_series">Moved to Series</string>
    <string name="after_time_expried">Your Free Trial has been expired</string>
    <string name="alert">Alert!!</string>
    <string name="alert_mx_player">MX Player needs to be installed!</string>
    <string name="alert_player">needs to be installed!</string>
    <string name="alert_vlc_player">VLC Player needs to be installed!</string>
    <string name="all">ALL</string>
    <string name="all_app_prompt">An external app tries to control %s. The app requesting access cannot be determined. Allowing this app grants ALL apps access.</string>
    <string name="all_channel">Show All Channels</string>
    <string name="all_channels">All Channels</string>
    <string name="all_logs">All Logs</string>
    <string name="all_movies_deleted_successfully">All Movies Deleted Successfully</string>
    <string name="all_series_deleted_successfully">All Episode Deleted Successfully</string>
    <string name="allowed_vpn_apps_info">Allowed VPN apps: %1$s</string>
    <string name="already_addedd">Already Added</string>
    <string name="already_crt_server">You already created profile for this server</string>
    <string name="already_exist_with_name">Already Exists with NAME:</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_registered_login">Already Registered?<u> Log in </u>here</string>
    <string name="and_portal">and Portal</string>
    <string name="announcement_message">Message</string>
    <string name="any_name">Any Name</string>
    <string name="app_id">A4FEBA39</string>
    <string name="app_name">GGTV Pro</string>
    <string name="app_no_longer_exists">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="app_update">Update</string>
    <string name="app_update_message">Please update the application to the latest version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apprest_name">Name</string>
    <string name="apprest_name_desc">Name of the VPN profile</string>
    <string name="apprest_ovpn">Config</string>
    <string name="apprest_ovpn_desc">Content of the OpenVPN configuration file. These files are usually have the extension .ovpn (sometimes also .conf) and are plain text multi line configuration files. If your MDM does not support multiline configuration entries, you can also use a base64 encoded string here. A text file can be converted to base64 using openssl base64 -A -in</string>
    <string name="apprest_uuid">UUID</string>
    <string name="apprest_uuid_desc">Unique UUID that identifies the profile (example: 0E910C15–9A85-4DD9-AE0D-E6862392E638). Generate using uuidgen or similar tools</string>
    <string name="apprest_ver">Version of the managed configuration schema</string>
    <string name="apprest_vpnconf">VPN configuration</string>
    <string name="apprest_vpnlist">List of VPN configurations</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_add_player">Are you sure you want to add this player ?</string>
    <string name="are_you_sure_you_want_reset_player">Are you sure you want to reset player to default?</string>
    <string name="are_you_sure_you_want_to_remove_palyer">Are you sure you want to remove external player ?</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="browse">Browse</string>
    <string name="bt_submit_login">SAVE &amp; LOGIN</string>
    <string name="close">Close</string>
    <string name="edit_user_details">Edit Your Login Details</string>
    <string name="file">FILE</string>
    <string name="file_url">FILE/URL</string>
    <string name="input_m3u_line">Input m3u line</string>
    <string name="m3u_url">M3U URL</string>
    <string name="playlist_name">PLAYLIST NAME</string>
    <string name="playlist_type">PLAYLIST TYPE</string>
</resources>