<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/activity_login" android:background="#de12161e" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="locale"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_logo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="80.0dip" android:layout_marginTop="20.0sp" android:src="@drawable/logo" android:scaleType="fitCenter" />
    <ScrollView android:layout_gravity="center" android:layout_width="500.0dip" android:layout_height="fill_parent">
        <RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="70.0dip">
            <RelativeLayout android:id="@id/rl_playlist_name" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:id="@id/tv_parental_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/edit_user_details" android:drawablePadding="7.0dip" android:drawableStart="@drawable/img_edit_user" android:layout_marginStart="10.0dip" />
                <ImageView android:id="@id/iv_div" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="15.0dip" android:layout_below="@id/tv_parental_password" />
                <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/playlist_name" android:padding="10.0dip" android:layout_width="150.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/playlist_name" android:layout_below="@id/iv_div" android:layout_marginStart="10.0dip" />
                <EditText android:textSize="14.0sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@id/et_name" android:background="@drawable/selector_verify_password_fields" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:focusable="true" android:nextFocusUp="@id/et_email" android:nextFocusDown="@id/et_sever_url" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:hint="@string/any_name" android:maxLines="1" android:lines="1" android:singleLine="true" android:layout_below="@id/iv_div" android:layout_centerHorizontal="true" android:inputType="text" android:textCursorDrawable="@null" android:fontFamily="sans-serif" android:textDirection="locale" android:layout_marginEnd="20.0dip" android:layout_toEndOf="@id/playlist_name" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/rl_playlist_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/rl_playlist_name">
                <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/tv_playlist_type" android:padding="10.0dip" android:layout_width="150.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/playlist_type" android:layout_marginStart="10.0dip" />
                <RadioGroup android:orientation="horizontal" android:id="@id/rg_radio" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="-55.0dip" android:layout_toEndOf="@id/tv_playlist_type">
                    <RadioButton android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/rb_file" android:tag="3" android:padding="10.0dip" android:layout_width="150.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:checked="true" android:text="@string/file" android:onClick="onRadioButtonClicked" android:layout_marginStart="50.0dip" app:buttonTint="@color/black" />
                    <RadioButton android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/rb_m3u" android:tag="3" android:padding="10.0dip" android:layout_width="150.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/m3u_url" android:onClick="onRadioButtonClicked" app:buttonTint="@color/black" />
                </RadioGroup>
            </RelativeLayout>
            <RelativeLayout android:id="@id/rl_file_or_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/rl_playlist_type">
                <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/file_or_url" android:padding="10.0dip" android:layout_width="150.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/file_url" android:layout_marginStart="10.0dip" />
                <EditText android:textSize="14.0sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@id/et_import_m3u" android:background="@drawable/selector_verify_password_fields" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:focusable="true" android:visibility="invisible" android:nextFocusUp="@id/et_email" android:nextFocusDown="@id/et_sever_url" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="@dimen/_8dp" android:hint="@string/input_m3u_line" android:maxLines="1" android:lines="1" android:singleLine="true" android:layout_centerHorizontal="true" android:inputType="textEmailAddress" android:textCursorDrawable="@null" android:fontFamily="sans-serif" android:layout_marginEnd="20.0dip" android:layout_toEndOf="@id/file_or_url" />
                <EditText android:textSize="14.0sp" android:textColor="@color/black" android:textColorHint="@color/black" android:id="@id/et_import_m3u_file" android:background="@drawable/selector_verify_password_fields" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:focusable="true" android:visibility="invisible" android:nextFocusUp="@id/et_email" android:nextFocusDown="@id/et_sever_url" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="@dimen/_8dp" android:hint="@string/input_m3u_line" android:maxLines="1" android:lines="1" android:singleLine="true" android:layout_centerHorizontal="true" android:inputType="textEmailAddress" android:textCursorDrawable="@null" android:fontFamily="sans-serif" android:layout_marginEnd="20.0dip" android:layout_toEndOf="@id/file_or_url" />
                <Button android:textSize="16.0sp" android:textColor="@color/black" android:layout_gravity="center" android:id="@id/bt_browse" android:tag="3" android:background="@drawable/logout_btn" android:focusable="true" android:visibility="visible" android:layout_width="140.0dip" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:text="@string/browse" android:layout_toEndOf="@id/file_or_url" />
                <TextView android:textColor="@color/black" android:id="@id/tv_browse_error" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="12.0dip" android:layout_marginStart="10.0dip" android:layout_toEndOf="@id/bt_browse" />
                <TextView android:textSize="12.0sp" android:textColor="@color/black" android:id="@id/tv_file_path" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="12.0dip" android:layout_marginStart="10.0dip" android:layout_toEndOf="@id/bt_browse" />
            </RelativeLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/rl_import" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:layout_marginBottom="30.0dip" android:layout_below="@id/rl_file_or_url" android:layout_centerHorizontal="true">
                <Button android:textColor="@color/white" android:id="@id/import_m3u" android:background="@drawable/back_btn_effect" android:layout_width="144.0dip" android:layout_height="40.0dip" android:text="@string/bt_submit_login" android:textAllCaps="false" android:layout_marginEnd="40.0dip" />
                <Button android:textColor="@color/white" android:id="@id/rl_view_log" android:background="@drawable/logout_btn_effect" android:layout_width="144.0dip" android:layout_height="40.0dip" android:text="@string/close" android:textAllCaps="true" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>